--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ a:focus {
 .sidebar h1{
 	width:100%;
 	font-size:2.5em;
+	font-size:2.7vw;
 	font-weight:700;
 	margin-bottom:1em;
 	COLOR:#fff;
@@ -66,6 +67,9 @@ a:focus {
 }
 .details{
 	margin-top:2em;
+}
+.details h1{
+  font-size:0em;
 }
 .details h3{
 	font-weight:600;
